syntax = "proto3";

package metadata;
import "google/protobuf/descriptor.proto";
import "v1/user/enum.proto";

extend google.protobuf.MethodOptions {
  optional metadata.HTTP http = 50002;
  optional metadata.RPC rpc = 50003;
}

message RPC {
  bool is_public = 1;
  metadata.AccessControl access_control = 2;
}

message HTTP {
  bool is_public = 1;
  metadata.AccessControl access_control = 2;
}


message AccessControl {
  repeated user.EnumRole roles = 2;
}