syntax = "proto3";
package user;

enum EnumRole {
  CUSTOMER = 0;
  CUSTOMER_MEMBERSHIP = 1;

  ADMIN = 5505;
  SUPER_ADMIN = 5506;
}